fix: Adjust z-index to show remote video

--- a/app/style/common/variables.less
+++ b/app/style/common/variables.less
@@ -203,9 +203,10 @@
 @z-index-badge: @z-index-level-2;
 @z-index-panel: @z-index-level-3;
 @z-index-bubble: @z-index-level-3;
-@z-index-modal: @z-index-level-4;
-@z-index-context: @z-index-level-7;
-@z-index-warnings: @z-index-level-7;
+@z-index-video: @z-index-level-4;
+@z-index-context: @z-index-level-5;
+@z-index-warnings: @z-index-level-6;
+@z-index-modal: @z-index-level-7;
 
 // ----------------------------------------------------------------------------
 // Modal
