--- a/app/style/video-calling.less
+++ b/app/style/video-calling.less
@@ -98,6 +98,7 @@
   .video-container-small;
   left: auto;
   bottom: auto;
+  z-index: @z-index-video;
 
   .video-element {
     .video-container-round;
